# msi-examples

./: .gitignore  README.md  aggregate.py  collect.py  distribute.py  execute.py  func.py  generate.py  msi-run.sh  pyproject.toml  requirements.txt  run-example-local.sh  worker.py
