[tool.poetry]
name = "msi-examples"
version = "0.1.0"
description = "MSI Examples"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
pandas = "*"
snappy = "^3.3"
snappy-15-knots = "^1.2.1"
matplotlib = "*"

[tool.poetry.group.dev.dependencies]
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
