[tool.poetry]
name = "msi-examples"
version = "0.1.0"
description = "MSI Examples"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^6.5.2"

[tool.poetry.group.dev.dependencies]
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
